--- a/openfisca_nsw_ess_heab/tests/F4/ACOP_is_20_percent_greater_than_baseline.yaml
+++ b/openfisca_nsw_ess_heab/tests/F4/ACOP_is_20_percent_greater_than_baseline.yaml
@@ -22,3 +22,15 @@
     product_class: product_class_eleven
   output:
     ACOP_is_20_percent_greater_than_baseline: True
+- name: test ACOP is 20% greater than baseline for AJY072LALBH (GEMS 2019 registered AC in product class 11)
+  period: 2020
+  absolute_error_margin: 0.01
+  input:
+    cooling_capacity: 22.4
+    heating_capacity: 0
+    cooling_power_input: 5.404
+    heating_power_input: 5.374
+    weighted_average_inactive_power_consumption: 57.186
+    product_class: product_class_eleven
+  output:
+    ACOP_is_20_percent_greater_than_baseline: True
