--- a/openfisca_nsw_ess_heab/parameters/HEAB/F6/average_power.yaml
+++ b/openfisca_nsw_ess_heab/parameters/HEAB/F6/average_power.yaml
@@ -1,15 +1,19 @@
 description: Table F5.2 - average power variable, dependent on the control system
     used.
 reference: Energy Savings Scheme Rule, beginning 30 March 2020.
-refrigerated_cabinet:
+no_control_system:
   values:
     2021-04-01:
-      value: 2.8
-reach_in_freezer:
+      value: 1
+temperature_dependent_speed_control:
   values:
     2021-04-01:
-      value: 1.8
-cool_room:
+      value: 0.8
+pressure_dependent_speed_control:
   values:
     2021-04-01:
-      value: 2.6
+      value: 0.8
+timer_speed_control:
+  values:
+    2021-04-01:
+      value: 0.8
