--- a/openfisca_nsw_ess_heab/tests/HEAB/F1/F1_2_electricity_savings.yaml
+++ b/openfisca_nsw_ess_heab/tests/HEAB/F1/F1_2_electricity_savings.yaml
@@ -47,4 +47,4 @@
     F1_2_net_volume: 485
     F1_product_class: product_class_five
   output:
-    F1_2_electricity_savings: 1.617447078000001
+    F1_2_electricity_savings: 1.4377
