--- a/openfisca_nsw_ess_heab/parameters/HEAB/F14/table_F14_3.yaml
+++ b/openfisca_nsw_ess_heab/parameters/HEAB/F14/table_F14_3.yaml
@@ -1,5 +1,6 @@
 description: Values from Table F14.3.
 reference: Energy Savings Scheme Rule, beginning 30 March 2020.
-values:
-  2021-04-01:
-    value: 10
+lifetime:
+  values:
+    2021-04-01:
+      value: 10
