--- a/openfisca_nsw_ess_heab/parameters/HEAB/F4/lifetime.yaml
+++ b/openfisca_nsw_ess_heab/parameters/HEAB/F4/lifetime.yaml
@@ -1,5 +1,4 @@
-description: Table B1.1, Energy Savings Scheme Rules - Residential Building
-  Electricity Savings Factor (MWh per Washing Machine Sold)
+description: lifetime for activity definition F4
 reference: Energy Savings Scheme Rule, beginning 30 March 2020.
 values:
   2021-04-01:
