--- a/openfisca_nsw_ess_heab/tests/HEAB/F4/AEER_and_ACOP.yaml
+++ b/openfisca_nsw_ess_heab/tests/HEAB/F4/AEER_and_ACOP.yaml
@@ -1,5 +1,6 @@
 - name: Test reference cooling annual energy use for activity definition F4.
   period: 2022
+  absolute_error_margin: 0.01
   input:
     cooling_capacity: 5.275
     weather_zone: hot_zone
@@ -8,6 +9,7 @@
     F4_reference_cooling_annual_energy_use: 2873.4
 - name: Test reference cooling annual energy use for activity definition F4.
   period: 2022
+  absolute_error_margin: 0.01
   input:
     cooling_capacity: 5.275
     weather_zone: average_zone
@@ -16,14 +18,16 @@
     F4_reference_cooling_annual_energy_use: 1312.2
 - name: Test reference cooling annual energy use for activity definition F4.
   period: 2022
+  absolute_error_margin: 0.01
   input:
     cooling_capacity: 5.275
     weather_zone: cold_zone
     F4_product_class: product_class_nine
   output:
-    F4_reference_cooling_annual_energy_use: 1063.2
+    F4_reference_cooling_annual_energy_use: 868.24
 - name: Test reference heating annual energy use for activity definition F4.
   period: 2022
+  absolute_error_margin: 0.1
   input:
     heating_capacity: 5.6
     weather_zone: hot_zone
@@ -32,6 +36,7 @@
     F4_reference_heating_annual_energy_use: 188.4
 - name: Test reference heating annual energy use for activity definition F4.
   period: 2022
+  absolute_error_margin: 0.1
   input:
     heating_capacity: 5.6
     weather_zone: average_zone
@@ -40,6 +45,7 @@
     F4_reference_heating_annual_energy_use: 804.2
 - name: Test reference heating annual energy use for activity definition F4.
   period: 2022
+  absolute_error_margin: 0.1
   input:
     heating_capacity: 5.6
     weather_zone: cold_zone
