--- a/openfisca_nsw_ess_heab/tests/HEAB/F4/electricity_savings.yaml
+++ b/openfisca_nsw_ess_heab/tests/HEAB/F4/electricity_savings.yaml
@@ -1,5 +1,6 @@
 - name: Test reference cooling annual energy use for activity definition F4.
   period: 2022
+  absolute_error_margin: 0.1
   input:
     cooling_capacity: 5.275
     heating_capacity: 5.6
@@ -11,6 +12,7 @@
     F4_electricity_savings: 5.21
 - name: Test reference cooling annual energy use for activity definition F4.
   period: 2022
+  absolute_error_margin: 0.1
   input:
     cooling_capacity: 5.275
     heating_capacity: 5.6
