--- a/openfisca_nsw_ess_heab/tests/HEAB/F11/F11_eligibility_requirements.yaml
+++ b/openfisca_nsw_ess_heab/tests/HEAB/F11/F11_eligibility_requirements.yaml
@@ -25,4 +25,4 @@
     F11_existing_equipment_installation_date: 2012-01-29
     F11_existing_equipment_has_air_fuel_ratio: True
   output:
-    F11_meets_eligibility_requirements: True
+    F11_meets_eligibility_requirements: False
